--- a/ImageViever.xcodeproj/xcshareddata/xcschemes/ImageViever.xcscheme
+++ b/ImageViever.xcodeproj/xcshareddata/xcschemes/ImageViever.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "929D5C5A2726E265001E4B7C"
+            BuildableName = "ImageViever.app"
+            BlueprintName = "ImageViever"
+            ReferencedContainer = "container:ImageViever.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
